--- a/app/src/main/res/drawable/list_selector.xml
+++ b/app/src/main/res/drawable/list_selector.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:exitFadeDuration="@android:integer/config_mediumAnimTime">
-    <item android:state_activated="true"
-        android:drawable="@android:drawable/list_selector_background"  />
-    <item  android:drawable="@android:drawable/list_selector_background" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:state_selected="false"
+        android:state_pressed="false"
+        android:drawable="@drawable/list_item_selected" />
+
+    <item android:state_pressed="true"
+
+        android:drawable="@drawable/list_item_pressed" />
+
+    <item android:state_selected="true"
+        android:state_pressed="false"
+        android:drawable="@drawable/list_item_unselected" />
 </selector>
