--- a/app/src/main/res/drawable/rounded_edit_text.xml
+++ b/app/src/main/res/drawable/rounded_edit_text.xml
@@ -4,6 +4,13 @@
     android:shape="rectangle"
     >
 
+    <padding
+        android:bottom="3dp"
+        android:top="3dp"
+        android:left="10dp"
+        android:right="5dp">
+    </padding>
+
     <solid android:color="#FFF" />
 
     <corners android:radius="5dp" />
