--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:divider="#AAA"
         android:dividerHeight="3dp"
+        android:listSelector="@drawable/list_selector"
         >
     </ListView>
 
