--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:divider="#AAA"
         android:dividerHeight="3dp"
+        android:listSelector="@drawable/list_selector"
         >
     </ListView>
 
