--- a/app/src/main/res/menu/add_button.xml
+++ b/app/src/main/res/menu/add_button.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/frag1_item"
+        android:id="@+id/btAddMenuItem"
         app:showAsAction="always"
-        android:title="add">
+        android:title="add"
+        android:icon="@drawable/plus">
     </item>
 </menu>
