--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,5 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
+    <group android:id="@+id/group_feature"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/btCall"
+            app:showAsAction="always"
+            android:title="Call"
+            android:icon="@drawable/phone_call">
+        </item>
+        <item
+            android:id="@+id/btEditMenuItem"
+            app:showAsAction="always"
+            android:title="delete"
+            android:icon="@drawable/edit_icon">
+        </item>
+    </group>
 
 </menu>
