--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/image_size"
         android:layout_height="@dimen/image_size"
         android:layout_margin="10dp"
-        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
         android:scaleType="fitXY"
         android:src="@drawable/contact_image"
         android:background="@drawable/image_style"
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_toRightOf="@+id/ivPhotoListItem"
-        android:padding="10dp"
+        android:padding="5dp"
+        android:layout_marginRight="20dp"
         >
 
         <TextView
