ContactsFragment restarts loader after long click to make nothing checked. Width of all images are made smaller.

--- a/app/src/main/res/layout-land/fragment_add_contact.xml
+++ b/app/src/main/res/layout-land/fragment_add_contact.xml
@@ -24,6 +24,8 @@
                     android:scaleType="fitXY"
                     android:src="@drawable/contact_image"
                     android:background="@drawable/image_style"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     >
                 </ImageButton>
 
