--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/ivPhotoListItem"
-        android:layout_width="@dimen/image_size"
+        android:layout_width="80dp"
         android:layout_height="@dimen/image_size"
         android:layout_margin="10dp"
         android:layout_centerVertical="true"
