--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -64,6 +64,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:clickable="false"
+        android:button="@drawable/custom_checkbox_selector"
         />
 
     <TextView
