--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/linepaperbitmap"
     >
 
@@ -26,6 +24,18 @@
         android:text="Your list is empty!">
     </TextView>
 
+    <ImageButton
+        android:id="@+id/btOpenAddContactFragment"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="70dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/rounded"
+        android:src="@drawable/plus"
+        android:scaleType="fitXY"
+        />
 
 
-</LinearLayout>
+</RelativeLayout>
